# opengfd

./: .gitignore  BuildMetaphor.ps1  BuildP5R.ps1  BuildReloadedMod.ps1  CHANGELOG.md  Cargo.toml  README.md  SetEnv.ps1  UnitTest.ps1  env.yaml
.github/workflows/: reloaded.yml
.nvim/: riri_config.lua
buildscript/opengfd.BuildCommon/: Argument.cs  CodePackage.cs  EnvManager.cs  Executor.cs  Publish.cs  Terminal.cs  Utils.cs  opengfd.BuildCommon.sln
buildscript/opengfd.BuildMetaphor/: Program.cs  opengfd.BuildMetaphor.csproj  opengfd.BuildMetaphor.sln
buildscript/opengfd.BuildP5R/: Program.cs  opengfd.BuildP5R.sln
metaphor.opengfd/: BuildLinked.ps1  Config.cs  ModConfig.json  Publish.ps1  metaphor.opengfd.csproj  metaphor.opengfd.sln
metaphor.opengfd/Template/: ModBase.cs  ModContext.cs  Startup.cs
metaphor.opengfd/Template/Configuration/: Configurable.cs  Configurator.cs  ConfiguratorMixinBase.cs  Utilities.cs
opengfd/: Cargo.toml
opengfd-globals/: Cargo.toml  build.rs
opengfd-globals/middata/: self.rs  self_xrd744.rs
opengfd-globals/src/: globals_xrd744.rs  globals_xrd759.rs  lib.rs
opengfd-inspector/: Cargo.toml
opengfd-inspector-components/: Cargo.toml
opengfd-inspector-components/src/: bounding_box.rs  bullet.rs  lib.rs  panel.rs  searchbar.rs  table.rs
opengfd-inspector/src/: globals.rs  imgui_hook.rs  lib.rs  state.rs  window.rs
opengfd-inspector/src/components/: searchbar.rs  table.rs
opengfd-inspector/src/panels/: about.rs  common.rs  graphics.rs  resources.rs  scene_graph.rs  scheduler.rs  scripting.rs
opengfd-inspector/src/panels/attachment/: camera.rs  mesh.rs  node.rs  property.rs
opengfd-proc/: Cargo.toml
opengfd-proc-impl/: Cargo.toml
opengfd-proc-impl/src/: derive_rc.rs  gfd_static.rs  lib.rs
opengfd-proc/src/: lib.rs
opengfd-reloaded/: Cargo.toml  build.rs
opengfd-reloaded-p5r/: Cargo.toml  build.rs
opengfd-reloaded-p5r/data/: package.toml
opengfd-reloaded-p5r/src/: adx.rs  globals_xrd744.rs  graphics.rs  init.rs  io.rs  lib.rs
opengfd-reloaded/data/: hashes.toml  package.toml
opengfd-reloaded/data/modfiles/MFEssentials/CPK/OPENGFD_COMMON/DEBUG/: DEBUG_FONT.DDS
opengfd-reloaded/src/: adx.rs  globals.rs  graphics.rs  init.rs  io.rs  lib.rs  structures.rs  testing.rs  tpl.rs
opengfd-tests/: Cargo.toml
opengfd-tests/src/: hello_world_01.rs  lib.rs  sample_font.rs
opengfd/src/: globals.rs  globals_xrd744.rs  lib.rs
opengfd/src/anim/: anim_controller.rs  anim_effector.rs  animation.rs  biped_ik.rs  key.rs  timeline.rs
opengfd/src/debug/: perf_meter.rs
opengfd/src/device/hedge/fnd/: allocator.rs  base_object.rs  free_list.rs  heap_base.rs  mutex.rs  tlsf_heap.rs
opengfd/src/device/hedge/fw/: heap.rs
opengfd/src/device/hedge/hid/: keyboard.rs
opengfd/src/device/hedge/needle/: surface_base.rs  texture.rs
opengfd/src/device/hedge/ut/: array.rs  link_list.rs  pair.rs
opengfd/src/device/ngr/: allocator.rs  hint.rs  structures.rs
opengfd/src/device/ngr/renderer/: blend.rs  bytecode.rs  cbuffer.rs  hint.rs  pkt.rs  ps.rs  render.rs  set_texture.rs  shader.rs  state.rs  vs.rs
opengfd/src/device/ngr/renderer/d3d/: d3d.rs  state.rs
opengfd/src/effect/: behavior.rs  camera.rs  helper.rs  light.rs  mesh.rs  misc.rs  object_particle.rs  particle.rs  parts.rs  polygon_board.rs  polygon_circle.rs  polygon_flash.rs  polygon_glitter.rs  polygon_thunder.rs  polygon_track.rs  polygon_wind.rs  post_effect.rs  resources.rs
opengfd/src/gfw/: effect.rs  fade.rs  fiber.rs  list.rs  smartpointer.rs
opengfd/src/graphics/: cull.rs  curve.rs  draw2d.rs  environment.rs  infinite_ocean.rs  material.rs  post_effect.rs  quake.rs  render_ot.rs  resources.rs  scene.rs  skin.rs  texture.rs
opengfd/src/graphics/render/: cmd_buffer.rs  render.rs
opengfd/src/graphics/shader/: flag_xrd744.rs  flag_xrd759.rs  shader.rs
opengfd/src/graphics/shader/attribute/: alpha_v1.rs  distortion_v2.rs  edge_v1.rs  field_v2.rs  lambert_v2.rs  layered_v2.rs  metal_v2.rs  outline_v1.rs  shadow_edge_v1.rs  shadow_v2.rs  sky_v2.rs  toon_v1.rs  toon_v2.rs  type10_v1.rs  type11_v2.rs  type13_v2.rs  type14_v2.rs  type15_v2.rs  type3_v2.rs  type5_v1.rs  type6_v1.rs  type7_v1.rs  type7_v2.rs  type8_v2.rs  type9_v1.rs  type9_v2.rs  water_v2.rs
opengfd/src/io/: controller.rs  keyboard.rs  mouse.rs
opengfd/src/kernel/: allocator.rs  asset.rs  chip.rs  file.rs  global_common.rs  global_impl.rs  global_xrd744.rs  global_xrd759.rs  graphics.rs  graphics_common.rs  graphics_xrd744.rs  init.rs  job.rs  task.rs  version.rs
opengfd/src/object/: camera.rs  epl.rs  geometry.rs  light.rs  mesh.rs  morph.rs  node.rs  object_base.rs
opengfd/src/pak/: file.rs
opengfd/src/platform/: global.rs  utils.rs
opengfd/src/tpl/: apk.rs  file_manager.rs  resource.rs
opengfd/src/tpl/sound/: player.rs
opengfd/src/utility/: free_list.rs  item_array.rs  math.rs  misc.rs  mutex_win32.rs  name.rs  property.rs  reference.rs  stream.rs
p5rpc.opengfd/: BuildLinked.ps1  Config.cs  ModConfig.json  Publish.ps1  p5rpc.opengfd.csproj  p5rpc.opengfd.sln
p5rpc.opengfd/Template/: ModBase.cs  ModContext.cs  Startup.cs
p5rpc.opengfd/Template/Configuration/: Configurable.cs  Configurator.cs  ConfiguratorMixinBase.cs  Utilities.cs
tools/build-field-character-anims/: Cargo.toml
tools/serializer-test/: Cargo.toml
tools/serializer-test-cfb/: Cargo.toml
tools/serializer-test-p5r/: Cargo.toml
tools/serializer-test/src/: main.rs
tools/shader-compiler/: Cargo.toml
