[workspace]
resolver = "2"
members = [ 
    "opengfd", 
    "opengfd-globals",
    "opengfd-proc", 
    "opengfd-proc-impl",
    "opengfd-reloaded"
]

[workspace.package]
version = "0.0.0"
authors = [ "Rirurin" ]
categories = [ "games" ]
homepage = "https://riri.wtf"
repository = "https://github.com/rirurin/opengfd"
license-file = "LICENSE"
edition = "2021"
