[workspace]
resolver = "2"
members = [ 
    "opengfd", 
    "opengfd-globals", 
    "opengfd-inspector",
    "opengfd-proc", 
    "opengfd-proc-impl",
    "opengfd-reloaded", 
    "opengfd-tests"
]

[workspace.package]
version = "0.0.0"
authors = [ "Rirurin" ]
categories = [ "games" ]
homepage = "https://riri.wtf"
repository = "https://github.com/rirurin/opengfd"
license-file = "LICENSE"
edition = "2021"

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.

# Release Build with Debug Info
[profile.release-debug]
inherits = "release"
debug = true # Allow us to debug using LLDB
