[package]
name = "opengfd-globals"
description = "Program globals for OpenGFD"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
opengfd = { path = "../opengfd" }
opengfd-proc = { path = "../opengfd-proc" }
riri-mod-tools-proc = { path = "../../riri-mod-tools/riri-mod-tools-proc" }

[build-dependencies]
opengfd-proc-impl = { path = "../opengfd-proc-impl" }
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"


[features]
default = ["v2-core"]
# Builds OpenGFD to interoperate with Persona 5 Royal
v1-core = []
# Builds OpenGFD to interoperate with Metaphor: Refantazio
v2-core = []