[package]
name = "opengfd-inspector-components"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
allocator-api2 = "0.2.21"
bitflags = "2.6"
cpp-types = { git = "https://github.com/rirurin/cpp-types" }
glam = "0.30.3"
imgui = { git = "https://github.com/rirurin/imgui-rs", features = ["docking", "tables-api"] }
opengfd = { path = "../opengfd" }
regex = "1.11.1"
riri-mod-tools-rt = { git = "https://github.com/rirurin/riri-mod-tools" }