[package]
name = "opengfd-inspector"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
allocator-api2 = "0.2.21"
bitflags = "2.6"
cpp-types = { path = "../../cpp-types/cpp-types" }
imgui = { path = "../../imgui-rs/imgui", features = ["tables-api"] }
opengfd = { path = "../opengfd" }
riri-mod-tools-rt = { path = "../../riri-mod-tools/riri-mod-tools-rt" }