[package]
name = "opengfd-tests"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
allocator-api2 = "0.2.21"
cpp-types = { git = "https://github.com/rirurin/cpp-types" }
opengfd = { path = "../opengfd", default-features = false }
riri-mod-tools-rt = { git = "https://github.com/rirurin/riri-mod-tools" }

[features]
v1 = ["opengfd/v1-core"]
v2 = ["opengfd/v2-core"]