[package]
name = "opengfd"
version = "0.1.0"
edition = "2021"

[dependencies]
allocator-api2 = "0.2.21"
bitflags = "2.6"
byteorder = "1"
cpp-types = { path = "../../cpp-types/cpp-types" }
crc32fast = "1.4.2"
glam = "0.29"
half = "2.4.1"
libc = "0.2.169"
opengfd-proc = { path = "../opengfd-proc" }
riri-mod-tools-proc = { version = "0.1", path = "../../riri-mod-tools/riri-mod-tools-proc" }
# rkyv = "0.8.9"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Kernel",
    "Win32_System_Performance",
    "Win32_System_Threading"
]

[features]
default = ["v2-core"]
# Builds OpenGFD to interoperate with Persona 5 Royal
v1-core = ["adapter-hedge"]
# Builds OpenGFD to interoperate with Metaphor: Refantazio
v2-core = ["adapter-ngr", "cfb_gap", "tpl"]
# Use Hedgehog Engine's DX11 wrapper and I/O classes
adapter-hedge = []
# Use Metaphor's DX11 wrapper and I/O classes 
adapter-ngr = []
tpl = []
# Serialize GFD structures using serde
io_serde = []
# Serialize GFD structures using rkyv
io_rkyv = []
# Use Catherine Full Body's animation structs
cfb_gap = []
# Metaphor: Refantazio demo has a slightly different gfdGlobal
is_metaphor_demo = []

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "unwind"
