[package]
name = "opengfd"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
allocator-api2 = "0.2.21"
bitflags = "2.6"
byteorder = "1"
cpp-types = { git = "https://github.com/rirurin/cpp-types" }
cri-adx = { git = "https://github.com/rirurin/cri-adx-rs" }
crc32fast = "1.4.2"
glam = "0.30.3"
image = { version = "0.25.6", optional = true }
half = "2.4.1"
libc = "0.2.169"
opengfd-proc = { path = "../opengfd-proc" }
riri-mod-tools-proc = { git = "https://github.com/rirurin/riri-mod-tools" }
riri-mod-tools-rt = { git = "https://github.com/rirurin/riri-mod-tools", default-features = false }
# rkyv = "0.8.9"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_XboxController"
]

[features]
default = [ "v2-core", "reloaded", "image_loader" ]
# Builds OpenGFD to interoperate with Persona 5 Royal
v1-core = [ "adapter-hedge" ]
# Builds OpenGFD to interoperate with Metaphor: Refantazio
v2-core = [ "adapter-ngr", "cfb_gap", "tpl" ]
# Use Hedgehog Engine's DX11 wrapper and I/O classes
adapter-hedge = []
# Use Metaphor's DX11 wrapper and I/O classes 
adapter-ngr = []
tpl = []
# Serialize GFD structures using serde
io_serde = []
# Serialize GFD structures using rkyv
io_rkyv = []
# Use Catherine Full Body's animation structs
cfb_gap = []
# Metaphor: Refantazio demo has a slightly different gfdGlobal
is_metaphor_demo = []
# Interface with Reloaded-II API (use if this is getting integrated into a mod)
reloaded = [ "riri-mod-tools-rt/reloaded" ]
# Use image crate for loading textures from common image formats
image_loader = [ "dep:image" ]